# sudo-SQL

./: .gitignore  README.md  main.py  pyproject.toml
configs/: infer.yaml  models.yaml  rl.yaml  sft.yaml
data/: BIRD  spider
docs/: logging_strategy.md  pipeline_architecture.md  results_management.md
schemas/spider/academic/ddl/: schema.sql
schemas/spider/academic/m-schema/: schema.sql
scripts/: generate_schema.py  run_inference.sh
sudo_sql/: logger_config.py  pipeline.py
sudo_sql/agents/: critic.py
sudo_sql/data_loaders/: __init__.py  base.py  bird.py  spider.py
sudo_sql/environments/: base.py  sft.py  sql_execution.py
sudo_sql/evaluation/: metrics.py
sudo_sql/inference/: engine.py
sudo_sql/models/: base.py  huggingface.py  openai.py
sudo_sql/pipeline/: __init__.py  base.py  inference.py  rl.py  sft.py
sudo_sql/training/rl/: environment.py  train_with_verl.py
sudo_sql/training/sft/: data_processor.py  train.py
tests/: test_data_loaders.py  test_inference.py  test_pipeline.py
