[project]
name = "sudo-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "transformers",
    "torch",
    "pyyaml",
    "datasets",
    "peft",
    "trl",
    "accelerate",
    "verl",
    "d-schema @ git+https://github.com/sido-meet/D-Schema.git",
    "loguru",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sudo_sql*"]
